--- a/res/xml/display_settings.xml
+++ b/res/xml/display_settings.xml
@@ -109,5 +109,16 @@
                 android:title="@string/wifi_display_settings_title"
                 settings:keywords="@string/keywords_display_cast_screen"
                 android:fragment="com.android.settings.wfd.WifiDisplaySettings" />
+                
+    <PreferenceCategory
+        android:key="wakeup"
+        android:title="@string/wakeup_section_header" >
+
+            <SwitchPreference
+                android:key="volume_rocker_wake"
+                android:summary="@string/volume_rocker_wake_summary"
+                android:title="@string/volume_rocker_wake_title" />
+             
+    </PreferenceCategory>
 
 </PreferenceScreen>
